cswap/src/snapshots/cswap__transforms__tests__add_get_model_snap.snap
---
source: cswap/src/transforms.rs
expression: p.to_string()
---
"(declare-const x Int)\n(assert (= x 4))\n(check-sat)\n(get-model)\n"
