cswap/src/snapshots/cswap__transforms__tests__all_rcholes_undo_snap.snap
---
source: cswap/src/transforms.rs
expression: "p.to_string() + \"\\n\" + &md.constvns.join(\"\\n\")"
---
"\n\n(assert (= 3 4))\n\n"
