cswap/src/snapshots/cswap__transforms__tests__all_rcholes_undo_then_inc_snap.snap
---
source: cswap/src/transforms.rs
expression: p.to_string()
---
"(declare-const GEN2 Int)\n(declare-const GEN1 Int)\n\n\n(assert (= GEN1 GEN2))\n"
