cswap/src/snapshots/cswap__transforms__tests__ba_script_snap.snap
---
source: cswap/src/transforms.rs
expression: "ba_script(&mut p, &mut Metadata::new_empty()).unwrap()"
---
(declare-const x Int)
(declare-const y Int)
(declare-const BAV1 Bool)
(declare-const BAV2 Bool)
(declare-const BAV3 Bool)
(declare-const BAV4 Bool)
(declare-const BAV5 Bool)
(declare-const BAV6 Bool)
(declare-const BDOM1 Bool)
(declare-const BDOM2 Bool)
(declare-const BDOM3 Bool)
(declare-const BDOM4 Bool)
(declare-const BDOM5 Bool)
(declare-const BDOM6 Bool)
(assert (= BAV1 (> x 3)))
(assert (= BAV2 (< y 7)))
(assert (= BAV3 (and (> x 3) (< y 7))))
(assert (= BAV4 (= y x)))
(assert (= BAV5 (or (and (> x 3) (< y 7)) (= y x))))
(assert (= BAV6 (distinct y x)))
(assert (= BDOM1 BAV1))
(assert (= BDOM2 BAV2))
(assert (= BDOM3 BAV3))
(assert (= BDOM4 BAV4))
(assert (= BDOM5 BAV5))
(assert (= BDOM6 BAV6))
(check-sat)
(get-model)

