cswap/src/snapshots/cswap__transforms__tests__bav_fmt_str.snap
---
source: cswap/src/transforms.rs
expression: "Script::Commands(get_bav_assign_fmt_str(&vec![(\"BAV1\" . to_owned (), Sort ::\n                                               Bool ()),\n                                              (\"BAV2\" . to_owned (), Sort ::\n                                               Dec ())]))"
---
(assert (= BAV1 {}))
(assert (= (= BAV2 0) {}))

