cswap/src/snapshots/cswap__transforms__tests__bav_qual_snap.snap
---
source: cswap/src/transforms.rs
expression: assertion_cmd.borrow()
---
(assert (forall ((x Real)) (= BAV1 (= x 4))))
